<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".addstoryactivity.AddStoryActivity">

        <ImageView
            android:id="@+id/addStoryImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:src="@drawable/ic_baseline_add_photo_alternate_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="@+id/addStoryImage"
            app:layout_constraintTop_toBottomOf="@+id/addStoryImage" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/gallery"
            app:layout_constraintEnd_toEndOf="@+id/addStoryImage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnCamera"
            app:layout_constraintTop_toBottomOf="@+id/addStoryImage" />


        <EditText
            android:id="@+id/descEdt"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="top|left"
            android:hint="@string/description"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addStoryImage" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/descEdt"
            app:layout_constraintStart_toStartOf="@+id/descEdt"
            app:layout_constraintTop_toBottomOf="@+id/descEdt" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
